--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,13 @@
             <artifactId>spring-jdbc</artifactId>
             <version>4.3.17.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.10</version>
+        </dependency>
+
     </dependencies>
 
 </project>
