--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <properties>
         <org.springframework.version>5.3.6</org.springframework.version>
-        <org.jackson.version>2.12.2</org.jackson.version>
+        <org.jackson.version>2.12.3</org.jackson.version>
     </properties>
 
     <dependencies>
@@ -18,6 +18,12 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
             <version>${org.springframework.version}</version>
         </dependency>
 
@@ -101,7 +107,7 @@
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
+            <artifactId>jackson-annotations</artifactId>
             <version>${org.jackson.version}</version>
         </dependency>
         <dependency>
@@ -114,6 +120,10 @@
             <artifactId>jackson-databind</artifactId>
             <version>${org.jackson.version}</version>
         </dependency>
+
+
+
+
     </dependencies>
 
 </project>
