--- a/src/main/resources/db2.properties
+++ b/src/main/resources/db2.properties
@@ -1,5 +1,5 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.99.100:3306/lumen?useSSL=false
+jdbc.url=jdbc:mysql://192.168.99.100:3306/new_system?useSSL=false
 jdbc.username=root
 jdbc.password=root
 jdbc.max=10
